Add border radius var to themes
Only used in panels right now, should be expanded to other elements eventually.

--- a/static/css/themes/Charcoal.less
+++ b/static/css/themes/Charcoal.less
@@ -92,6 +92,7 @@
 @bg-color-link: transparent;
 
 // Special Stuff
+@border-radius: 0;
 @bg-color-input: #1d1d1d;
 @border-color-input: #151515;
 @border-color-input-active: #2196F3;
