--- a/static/css/themes/Midnight.less
+++ b/static/css/themes/Midnight.less
@@ -92,6 +92,7 @@
 @bg-color-link: transparent;
 
 // Special Stuff
+@border-radius: 0;
 @bg-color-input: #151c25;
 @border-color-input: #080F18;
 @border-color-input-active: #2196F3;
