--- a/static/css/themes/Default.less
+++ b/static/css/themes/Default.less
@@ -92,6 +92,7 @@
 @bg-color-link: transparent;
 
 // Special Stuff
+@border-radius: 0.2em;
 @bg-color-input: #262C32;
 @border-color-input: #262C32;
 @border-color-input-active: #42A5F5;
