--- a/static/css/themes/Light.less
+++ b/static/css/themes/Light.less
@@ -92,6 +92,7 @@
 @bg-color-link: transparent;
 
 // Special Stuff
+@border-radius: 0;
 @bg-color-input: #FFFFFF;
 @border-color-input: #E0E0E0;
 @border-color-input-active: #2196F3;
