--- a/static/css/themes/Spruce.less
+++ b/static/css/themes/Spruce.less
@@ -91,6 +91,7 @@
 @bg-color-link: transparent;
 
 // Special Stuff
+@border-radius: 0;
 @bg-color-input: #131819;
 @border-color-input: #202c22;
 @border-color-input-active: #2196F3;
