Add Zooqle torrent indexer -- backlog only
Adds Zooqle backlog search option. Zooqle doesn't seem to offer a new releases RSS, so this is the best I can do for now.

--- a/templates/settings/indexers.html
+++ b/templates/settings/indexers.html
@@ -121,7 +121,7 @@
                             <i class="mdi mdi-checkbox-blank-outline c_box" id="skytorrents" value="${config['Torrent']['skytorrents']}"></i>
                         </span>
                         <span class="input-group-item form-control">
-                            SkyTorrents
+                            SkyTorrents (backlog only)
                         </span>
                     </div>
                 </div>
@@ -152,6 +152,16 @@
                         </span>
                         <span class="input-group-item form-control">
                             YTS
+                        </span>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="input-group">
+                        <span class="input-group-addon box_box">
+                            <i class="mdi mdi-checkbox-blank-outline c_box" id="zooqle" value="${config['Torrent']['zooqle']}"></i>
+                        </span>
+                        <span class="input-group-item form-control">
+                            Zooqle (backlog only)
                         </span>
                     </div>
                 </div>
