Simpler passing of 'defaults' to templates
Rather than pass to every template render, pass **defaults() which returns a dict of default values for rendering.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav">
-                <li class="dropdown ${'active' if current == 'status' else ''}">
+                <li class="dropdown ${'active' if current == 'library' else ''}">
                     <a href="${url_base}/library/status" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                         Library
                         <i class="mdi mdi-chevron-down"></i>
