#96 Fallback for uitheme key

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
         <title>Watcher</title>
         <meta content="${url_base}" name="url_base">
         <meta content="width=device-width,initial-scale=1" name="viewport">
-        <link href="${url_base}/auth/static/css/themes/${theme}.css?v=06.02" rel="stylesheet">
+        <link href="${url_base}/auth/static/css/themes/${uitheme or 'Default'}.css?v=08.01" rel="stylesheet">
         <link href="${url_base}/auth/static/css/lib/materialdesignicons.min.css?v=06.02" rel="stylesheet">
         <link href="${url_base}/auth/static/css/login.css?v=06.02" rel="stylesheet">
         <script src="${url_base}/auth/static/js/lib/jquery.310.min.js?v=06.14" type="text/javascript"></script>
