--- a/templates/settings/downloader.html
+++ b/templates/settings/downloader.html
@@ -163,7 +163,7 @@
                         </div>
                         <div class="col-md-6">
                             <label>Category</label>
-                            <input type="text" data-id="category" class="form-control" placeholder="Watcher" value="${config['Torrent']['DelugeRPC']['category']}" data-toggle="tooltip" title="Must&nbsp;include&nbsp;only a&#8209;z&nbsp;0&#8209;9&nbsp;&#8209;&nbsp;_">
+                            <input type="text" data-id="category" class="form-control" placeholder="Watcher" value="${config['Torrent']['DelugeRPC']['category']}" data-toggle="tooltip" title="${_('Must&nbsp;include&nbsp;only a&#8209;z&nbsp;0&#8209;9&nbsp;&#8209;&nbsp;_')}">
                         </div>
                         <div class="col-md-6">
                             <label>Priority</label>
@@ -210,7 +210,7 @@
                         </div>
                         <div class="col-md-6">
                             <label>Category</label>
-                            <input type="text" data-id="category" class="form-control" placeholder="Watcher" value="${config['Torrent']['DelugeWeb']['category']}" data-toggle="tooltip" title="Must&nbsp;include&nbsp;only a&#8209;z&nbsp;0&#8209;9&nbsp;&#8209;&nbsp;_">
+                            <input type="text" data-id="category" class="form-control" placeholder="Watcher" value="${config['Torrent']['DelugeWeb']['category']}" data-toggle="tooltip" title="${_('Must&nbsp;include&nbsp;only a&#8209;z&nbsp;0&#8209;9&nbsp;&#8209;&nbsp;_')}">
                         </div>
                         <div class="col-md-6">
                             <label>Priority</label>
