--- a/templates/system/update.html
+++ b/templates/system/update.html
@@ -11,12 +11,12 @@
         <div id="content" class="container-fluid">
 
             <div class="tasks hidden">
-                <h4>Waiting for tasks to finish...</h4>
+                <h4>${_('Waiting for tasks to finish...')}</h4>
 
             </div>
 
 
-            <div class="updating hidden">Updating</div>
+            <div class="updating hidden">${_('Updating')}</div>
             <div id="thinker">
                 <i class="mdi mdi-circle-outline animated"></i>
             </div>
