--- a/templates/system.html
+++ b/templates/system.html
@@ -14,12 +14,12 @@
         ${navbar}
         <div class="container-fluid">
 
-            <h2>System Information</h2>
+            <h2>${_('System Information')}</h2>
             <div class="col-md-12">
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <i class="mdi mdi-clock"></i> Server Time
+                            <i class="mdi mdi-clock"></i>${_('Server Time')}
                         </div>
                         <div id="server_time" class="panel-footer">
                             ${server_time[0]}
@@ -29,7 +29,7 @@
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <i class="mdi mdi-language-python"></i> Watcher Directory
+                            <i class="mdi mdi-language-python"></i>${_('Watcher Directory')}
                         </div>
                         <div class="panel-footer">
                             ${system['system']['path']}
@@ -39,7 +39,7 @@
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <i class="mdi mdi-database"></i> Database
+                            <i class="mdi mdi-database"></i>${_('Database')}
                             <span class="pull-right">[${system['database']['size']} KB]</span>
                         </div>
                         <div class="panel-footer">
@@ -50,7 +50,7 @@
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <i class="mdi mdi-settings"></i> Config
+                            <i class="mdi mdi-settings"></i>${_('Config')}
                         </div>
                         <div class="panel-footer">
                             ${system['config']['file']}
@@ -60,7 +60,7 @@
                 <div class="col-md-6">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <i class="mdi mdi-console"></i> Launch Arugments
+                            <i class="mdi mdi-console"></i>${_('Launch Arugments')}
                         </div>
                         <div class="panel-footer">
                             [Python ${system['system']['version']}]
@@ -70,30 +70,30 @@
                 </div>
             </div>
 
-            <h2>Backup</h2>
+            <h2>${_('Backup')}</h2>
             <div class="col-md-12">
                 <a class="btn btn-default" data-toggle="modal" data-target="#modal_create_backup">
                     <i class="mdi mdi-package-variant-closed"></i>
-                    Create Backup
+                    ${_('Create Backup')}
                 </a>
                 <a class="btn btn-default" data-toggle="modal" data-target="#modal_restore_backup">
                     <i class="mdi mdi-backup-restore"></i>
-                    Restore Backup
+                    ${_('Restore Backup')}
                 </a>
             </div>
             <br/>
             <br/>
 
-            <h2>Task Scheduler</h2>
+            <h2>${_('Task Scheduler')}</h2>
             <table id="tasks" class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th>Enabled</th>
-                        <th>Name</th>
-                        <th>Frequency</th>
-                        <th>Last Execution</th>
-                        <th>Next Execution</th>
-                        <th class="center">Execute Now</th>
+                        <th>${_('Enabled')}</th>
+                        <th>${_('Name')}</th>
+                        <th>${_('Frequency')}</th>
+                        <th>${_('Last Execution')}</th>
+                        <th>${_('Next Execution')}</th>
+                        <th class="center">${_('Execute Now')}</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -106,18 +106,18 @@
             <div class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title">Create Backup of Watcher?</h4>
+                        <h4 class="modal-title">${_('Create Backup of Watcher?')}</h4>
                     </div>
                     <div class="modal-body">
-                        A backup will be made of your <b>database</b>, <b>posters</b>, and <b>config</b>.
+                        ${_('A backup will be made of your <b>database</b>, <b>posters</b>, and <b>config</b>.')}
                         <div class="thinker_small">
                             <i class="mdi mdi-circle-outline animated"></i>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <div class="btn-group btn-group-justified">
-                            <a class="btn btn-default" data-dismiss="modal">Close</a>
-                            <a class="btn btn-success" onclick="create_backup(event, this)">Create Backup</a>
+                            <a class="btn btn-default" data-dismiss="modal">${_('Close')}</a>
+                            <a class="btn btn-success" onclick="create_backup(event, this)">${_('Create Backup')}</a>
                         </div>
                     </div>
                 </div>
@@ -127,23 +127,21 @@
             <div class="modal-dialog modal-sm">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title">Restore Backup of Watcher?</h4>
+                        <h4 class="modal-title">${_('Restore Backup of Watcher?')}</h4>
                     </div>
                     <div class="modal-body">
                         <div class="text_content">
-                            Restoring a backup will overwrite your <b>database</b>, <b>posters</b>, and <b>config</b>.
+                            ${_('Restoring a backup will overwrite your <b>database</b>, <b>posters</b>, and <b>config</b>')}.
                             <br/>
                             This cannot be undone.
                             <br/>
-                            <br/>
-                            Watcher will automatically restart after backup has been restored.
-                            <br/>
+                             Watcher will automatically restart after backup has been restored.')}
                             <br/>
                             <div class="input-group">
                                 <label class="btn btn-default input-group-btn" for="zip_file">
                                     <input id="zip_file" type="file" name="fileUpload" class="fileUpload" style="display:none;" onchange="_restore_zip_selected(this)"></input>
                                     <i class="mdi mdi-zip-box"></i>
-                                    Select Backup Zip
+                                    ${_('Select Backup Zip')}
                                 </label>
                                 <input id="zip_file_input" class="form-control input-group-item" disabled></input>
                             </div>
@@ -157,8 +155,8 @@
                     </div>
                     <div class="modal-footer">
                         <div class="btn-group btn-group-justified">
-                            <a class="btn btn-default" data-dismiss="modal">Close</a>
-                            <a id="submit_restore_zip" class="btn btn-success disabled" onclick="upload_restore_zip(event, this)">Restore Backup</a>
+                            <a class="btn btn-default" data-dismiss="modal">${_('Close')}</a>
+                            <a id="submit_restore_zip" class="btn btn-success disabled" onclick="upload_restore_zip(event, this)">${_('Restore Backup')}</a>
                         </div>
                     </div>
                 </div>
