--- a/templates/system/shutdown.html
+++ b/templates/system/shutdown.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="content" class="container-fluid">
-            <div class="message">Shutting Down</div>
+            <div class="message">${_('Shutting Down')}</div>
             <div id="thinker">
                 <i class="mdi mdi-circle-outline animated"></i>
             </div>
